# kairos-assistenre-ia-padrao

./: .gitignore  Dockerfile  PROGRESS.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.tsbuildinfo
backend/: .env.example  Dockerfile  requirements.txt  seed.py  seed_igreja.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: __init__.py  langgraph_orchestrator.py
backend/app/models/: __init__.py  member.py  skill.py
backend/app/multimodal/: engine.py
backend/app/repos/: audit_repo.py  conversation_repo.py  memory_repo.py  openrouter_llm.py  tool_repo.py
backend/app/routes/: agent_ws.py  aion.py  apps.py  audit.py  chat.py  health.py  langgraph_agent.py  members.py  multimodal.py  tools.py
backend/app/services/: llm.py  member_service.py  tenant.py
core/: container.py  sdk.py
core/application/: agent_manager.py  audit_manager.py  context_manager.py  conversation_manager.py  event_bus.py  memory_manager.py  orchestrator.py  prompt_composer.py  tool_registry.py
core/domain/entities/: agent.py  context.py  conversation.py  event.py  memory.py  tool.py
core/domain/interfaces/: audit_port.py  (+5 more)
kairos-aion-integration/: pyproject.toml
kairos-aion-integration/src/kairos_aion_integration/: __init__.py  connector.py  discovery.py  integration.py  mcp_manager.py  models.py  security.py  skill_registry.py
public/: manifest.json  sw.js
public/sdk/: kairos-sdk.js
src/app/: globals.css  layout.tsx
src/lib/: aionApi.ts  api.ts
src/stores/: aionStore.ts  chatStore.ts  uiStore.ts
(+16 files in other folders)
