[project]
name = "kairos-aion-integration"
version = "0.1.0"
description = "Integração entre Kairós Assistente e Aion"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kairos_aion_integration*"]
